--- a/.k8s/backend/message-hub.yaml
+++ b/.k8s/backend/message-hub.yaml
@@ -21,16 +21,16 @@ spec:
         ports:
         - containerPort: 12002
         env:
-          - name: KOTO_ADDRESS
+          - name: KOTO_LISTEN_ADDRESS
             value: ":12002"
           - name: KOTO_EXTERNAL_ADDRESS
             value: https://node1.koto.at
           - name: KOTO_USER_HUB_ADDRESS
-            value: http://central.koto.at
+            value: https://central.koto.at
           - name: KOTO_DB_HOST
             value: db-message-hub-service.backend
           - name: KOTO_DB_SSL_MODE
-            value: disable
+            value: require
           - name: KOTO_DB_USER
             value: postgres
           - name: KOTO_DB_PASSWORD
