--- a/.k8s/backend/user-hub.yaml
+++ b/.k8s/backend/user-hub.yaml
@@ -28,8 +28,10 @@ spec:
           - name: user-hub-key
             mountPath: "/tmp"
         env:
-          - name: KOTO_ADDRESS
+          - name: KOTO_LISTEN_ADDRESS
             value: ":12001"
+          - name: KOTO_EXTERNAL_ADDRESS
+            value: https://central.koto.at
           - name: KOTO_PRIVATE_KEY
             value: /tmp/key
           - name: KOTO_ADMINS
@@ -37,9 +39,9 @@ spec:
           - name: KOTO_DB_HOST
             value: db-user-hub-service.backend
           - name: KOTO_DB_SSL_MODE
-            value: disable
+            value: require
           - name: KOTO_FRONTEND_ADDRESS
-            value: http://koto.at
+            value: https://koto.at
           - name: KOTO_DB_USER
             value: postgres
           - name: KOTO_DB_PASSWORD
@@ -87,6 +89,8 @@ spec:
                 name: user-hub-firebase
                 key: firebase_token
           - name: KOTO_ADMIN_FRIENDSHIP
+            value: ""
+          - name: KOTO_DIGITALOCEAN_TOKEN
             value: ""
 ---
 apiVersion: v1
