--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -1,11 +1,6 @@
 on:
-  push:
-    # branches:
-    #   - master
-    # paths:
-    # - 'frontend/**'
-    tags:
-      - '*'
+  release:
+    types: [released]
 
 jobs:
   build:
@@ -77,12 +72,12 @@ jobs:
 
       - name: Update deployment file
         run: |
-          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend/user-hub.yaml
-          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/frontend/frontend.yaml
-          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend/message-hub.yaml
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml
 
       - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes
         run: |
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/user-hub.yaml
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend/frontend.yaml
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/message-hub.yaml
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml
