fix for workflow

--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -1,7 +1,8 @@
 on:
-  release:
-    types: [released]
-
+  push:
+    tags:
+      - '*staging'
+ 
 jobs:
   build:
     name: Build and Publish images
