more action fixes

--- a/.k8s/frontend/frontend.yaml
+++ b/.k8s/frontend/frontend.yaml
@@ -30,7 +30,7 @@ metadata:
   name: frontend-service
   namespace: frontend
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: frontend
   ports:
