--- a/.github/workflows/shipit.yml
+++ b/.github/workflows/shipit.yml
@@ -71,15 +71,28 @@ jobs:
       - name: Save DigitalOcean kubeconfig
         run: doctl kubernetes cluster kubeconfig save ${{ env.DO_CLUSTER_ID }}
 
+      - name: Update deployment file (staging)
+        run: |
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml
+          sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml
 
-      - name: Update deployment file
+      - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes (staging)
+        run: |
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml --force
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml --force
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml --force
+
+      - name: Update deployment file to (prod)
+        if: "!github.event.release.prerelease"
         run: |
           sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend/user-hub.yaml
           sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/frontend/frontend.yaml
           sed -i 's|<TAG>|'${{ needs.build.outputs.version }}'|' $GITHUB_WORKSPACE/.k8s/backend/message-hub.yaml
 
-      - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes
+      - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes (prod)
+        if: "!github.event.release.prerelease"
         run: |
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/user-hub.yaml
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend/frontend.yaml
-          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/message-hub.yaml
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/user-hub.yaml --force
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend/frontend.yaml --force
+          kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend/message-hub.yaml --force
