--- a/.k8s/backend-staging/postgres-message-hub-db.yaml
+++ b/.k8s/backend-staging/postgres-message-hub-db.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: message-hub-db-pvc
+  name: message-hub-db-pvc-staging
   namespace: backend-staging
 spec:
   accessModes:
@@ -59,5 +59,5 @@ spec:
       volumes:
       - name: message-hub-db-data
         persistentVolumeClaim:
-          claimName: message-hub-db-pvc
+          claimName: message-hub-db-pvc-staging
 
