--- a/.k8s/backend-staging/postgres-user-hub-db.yaml
+++ b/.k8s/backend-staging/postgres-user-hub-db.yaml
@@ -51,11 +51,13 @@ spec:
               secretKeyRef:
                 name: db-user-hub-password
                 key: password
+          - name: PGDATA
+            value: /var/lib/postgresql/data/pgdata
           ports:
           - containerPort: 5432
           volumeMounts:
           - name: user-hub-db-data
-            mountPath: /var/lib/postgresql
+            mountPath: /var/lib/postgresql/data
       volumes:
       - name: user-hub-db-data
         persistentVolumeClaim:
