--- a/.k8s/backend-staging/user-hub.yaml
+++ b/.k8s/backend-staging/user-hub.yaml
@@ -28,7 +28,7 @@ spec:
           - name: user-hub-key
             mountPath: "/tmp"
         env:
-          - name: KOTO_ADDRESS
+          - name: KOTO_LISTEN_ADDRESS
             value: ":12001"
           - name: KOTO_EXTERNAL_ADDRESS
             value: https://central.orbits.at
@@ -93,6 +93,8 @@ spec:
             value: ""
           - name: KOTO_DIGITALOCEAN_TOKEN
             value: ""
+          - name: KOTO_MESSAGEHUB_CONFIG
+            value: "https://raw.githubusercontent.com/mreider/koto/master/.k8s/backend-staging/message-hub.yaml"
 ---
 apiVersion: v1
 kind: Service
