--- a/.k8s/backend/user-hub.yaml
+++ b/.k8s/backend/user-hub.yaml
@@ -18,6 +18,15 @@ spec:
         - name: user-hub-key
           secret:
             secretName: user-hub-key
+        - name: kubectl
+          emptyDir: {}
+      initContainers:
+      - name: install-kubectl
+        image: allanlei/kubectl
+        volumeMounts:
+        - name: kubectl
+          mountPath: /data
+        command: ["cp", "/usr/local/bin/kubectl", "/data/kubectl"]
       containers:
       - name: user-hub
         image: k0t0/central:<TAG>
@@ -27,7 +36,15 @@ spec:
         volumeMounts:
           - name: user-hub-key
             mountPath: "/tmp"
+          - name: kubectl
+            subPath: kubectl
+            mountPath: /usr/local/bin/kubectl
         env:
+          - name: KOTO_DIGITALOCEAN_TOKEN
+            valueFrom:
+              secretKeyRef:
+                name: do-token
+                key: token
           - name: KOTO_LISTEN_ADDRESS
             value: ":12001"
           - name: KOTO_EXTERNAL_ADDRESS
@@ -39,7 +56,7 @@ spec:
           - name: KOTO_DB_HOST
             value: db-user-hub-service.backend
           - name: KOTO_DB_SSL_MODE
-            value: require
+            value: disable
           - name: KOTO_FRONTEND_ADDRESS
             value: https://koto.at
           - name: KOTO_DB_USER
@@ -89,8 +106,6 @@ spec:
                 name: user-hub-firebase
                 key: firebase_token
           - name: KOTO_ADMIN_FRIENDSHIP
-            value: ""
-          - name: KOTO_DIGITALOCEAN_TOKEN
             value: ""
           - name: KOTO_MESSAGEHUB_CONFIG
             value: "https://raw.githubusercontent.com/mreider/koto/master/.k8s/backend/message-hub.yaml"
