--- a/.k8s/backend/user-hub.yaml
+++ b/.k8s/backend/user-hub.yaml
@@ -15,17 +15,25 @@ spec:
     spec:
       terminationGracePeriodSeconds: 5
       initContainers:
-      - name: install-kubectl
-        image: allanlei/kubectl
+      - name: kubectl
+        image: mreider/kubectl:0.0.1
         volumeMounts:
         - name: kubectl
           mountPath: /data
         command: ["cp", "/usr/local/bin/kubectl", "/data/kubectl"]
+      - name: doctl
+        image: mreider/doctl:0.0.1
+        volumeMounts:
+        - name: doctl
+          mountPath: /data
+        command: ["cp", "/usr/local/bin/doctl", "/data/doctl"]
       volumes:
         - name: user-hub-key
           secret:
             secretName: user-hub-key
         - name: kubectl
+          emptyDir: {}
+        - name: doctl
           emptyDir: {}
         - name: koto-writeable
           emptyDir: {}
@@ -41,6 +49,11 @@ spec:
           - name: kubectl
             subPath: kubectl
             mountPath: /usr/local/bin/kubectl
+          - mountPath: /koto-writeable
+            name: koto-writeable
+          - name: doctl
+            subPath: doctl
+            mountPath: /usr/local/bin/doctl
           - mountPath: /koto-writeable
             name: koto-writeable
         env:
