Adding wildcard hosts in the ingress files

--- a/.k8s/ingresses-staging/ingress-backend.yaml
+++ b/.k8s/ingresses-staging/ingress-backend.yaml
@@ -11,8 +11,7 @@ metadata:
 spec:
   tls:
   - hosts:
-    - central.orbits.at
-    - node1.orbits.at
+    - "*.orbits.at"
     secretName: koto-tls-backend
   rules:
   - host: central.orbits.at
