--- a/.k8s/sponsored-hub/hub.yaml
+++ b/.k8s/sponsored-hub/hub.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hub-foo
+  name: hub-<NAME>
   namespace: sponsored-hubs
 spec:
   selector:
@@ -29,7 +29,7 @@ spec:
           - name: KOTO_ADDRESS
             value: ":12002"
           - name: KOTO_EXTERNAL_ADDRESS
-            value: https://foo.orbits.at
+            value: https://<NAME>.orbits.at
           - name: KOTO_USER_HUB_ADDRESS
             value: https://central.orbits.at
           - name: KOTO_DB_HOST
@@ -44,7 +44,7 @@ spec:
                 name: db-message-hub-password
                 key: password
           - name: KOTO_DB_NAME
-            value: koto-message-hub-foo
+            value: koto-message-hub-<NAME>
           - name: KOTO_S3_ENDPOINT
             value: https://fra1.digitaloceanspaces.com
           - name: KOTO_S3_KEY
@@ -58,12 +58,12 @@ spec:
                 name: message-hub-secrets
                 key: s3_secret
           - name: KOTO_S3_BUCKET
-            value: koto-message-hub-foo-staging
+            value: koto-message-hub-<NAME>-staging
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hub-service-foo
+  name: hub-service-<NAME>
   namespace: sponsored-hubs
 spec:
   type: ClusterIP
@@ -77,7 +77,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: koto-foo
+  name: koto-<NAME>
   namespace: sponsored-hubs
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -90,13 +90,13 @@ spec:
     - "*.orbits.at"
     secretName: koto-tls-backend
   rules:
-  - host: foo.orbits.at
+  - host: <NAME>.orbits.at
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: hub-service-foo
+            name: hub-service-<NAME>
             port:
               number: 12002
