#140 swipe to left / right to back or forward

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
 		"react-awesome-slider": "^4.1.0",
 		"react-cookie": "^4.0.3",
 		"react-dom": "16.13.1",
+		"react-easy-swipe": "0.0.21",
 		"react-iframe": "^1.8.0",
 		"react-markdown": "^4.3.1",
 		"react-notify-toast": "^0.5.1",
@@ -45,6 +46,7 @@
 		"react-router-last-location": "^2.0.1",
 		"react-scripts": "3.4.1",
 		"react-simple-pull-to-refresh": "^1.2.0",
+		"react-swipeable": "^6.0.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-saga": "^1.1.3",
