--- a/.k8s/backend-staging/user-hub.yaml
+++ b/.k8s/backend-staging/user-hub.yaml
@@ -67,7 +67,7 @@ spec:
           - name: KOTO_PRIVATE_KEY
             value: /tmp/key
           - name: KOTO_ADMINS
-            value: matt
+            value: matt,falconandy
           - name: KOTO_DB_HOST
             value: db-user-hub-service.backend-staging
           - name: KOTO_DB_SSL_MODE
