--- a/.k8s/sponsored-hub-staging/hub.yaml
+++ b/.k8s/sponsored-hub-staging/hub.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sponsored-hubs
+  name: sponsored-hubs-staging
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hub-<NAME>
-  namespace: sponsored-hubs
+  namespace: sponsored-hubs-staging
 spec:
   selector:
     matchLabels:
@@ -29,11 +29,11 @@ spec:
           - name: KOTO_ADDRESS
             value: ":12002"
           - name: KOTO_EXTERNAL_ADDRESS
-            value: https://<NAME>.koto.at
+            value: https://<NAME>.orbits.at
           - name: KOTO_USER_HUB_ADDRESS
-            value: https://central.koto.at
+            value: https://central.orbits.at
           - name: KOTO_DB_HOST
-            value: db-message-hub-service.backend
+            value: db-message-hub-service.backend-staging
           - name: KOTO_DB_SSL_MODE
             value: disable
           - name: KOTO_DB_USER
@@ -46,7 +46,7 @@ spec:
           - name: KOTO_DB_NAME
             value: koto-message-hub-<NAME>
           - name: KOTO_S3_ENDPOINT
-            value: https://ams3.digitaloceanspaces.com
+            value: https://fra1.digitaloceanspaces.com
           - name: KOTO_S3_KEY
             valueFrom:
               secretKeyRef:
@@ -64,7 +64,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hub-service-<NAME>
-  namespace: sponsored-hubs
+  namespace: sponsored-hubs-staging
 spec:
   type: ClusterIP
   selector:
@@ -78,7 +78,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: koto-<NAME>
-  namespace: sponsored-hubs
+  namespace: sponsored-hubs-staging
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "do-issuer"
@@ -87,10 +87,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - "*.koto.at"
+    - "*.orbits.at"
     secretName: koto-tls-backend
   rules:
-  - host: <NAME>.koto.at
+  - host: <NAME>.orbits.at
     http:
       paths:
       - path: /
