#167 Bottom bar added

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -7,6 +7,7 @@
       "@sagas/*": ["./src/sagas/*"],
       "@services/*": ["./src/services/*"],
       "@selectors/*": ["./src/selectors/*"],
+      "@assets/*": ["./src/assets/*"],
     }
   }
 }
