--- a/.k8s/minikube/backend/message-hub.yaml
+++ b/.k8s/minikube/backend/message-hub.yaml
@@ -14,6 +14,10 @@ spec:
         app: message-hub
     spec:
       terminationGracePeriodSeconds: 5
+      hostAliases:
+      - ip: "192.168.64.2"
+        hostnames:
+        - "central.orbits.local"
       containers:
       - name: message-hub
         image: message-hub:latest
