--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
 		"@material-ui/types": "^5.1.0",
 		"@types/node": "14.0.14",
 		"@types/react-router-dom": "^5.1.5",
-		"axios": "^0.19.2",
+		"axios": "^0.21.1",
 		"blueimp-load-image": "^5.14.0",
 		"core-js": "^3.6.5",
 		"dotenv": "^8.2.0",
@@ -45,7 +45,7 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-router-last-location": "^2.0.1",
-		"react-scripts": "3.4.1",
+		"react-scripts": "^3.4.4",
 		"react-simple-pull-to-refresh": "^1.2.0",
 		"react-swipeable": "^6.0.0",
 		"redux": "^4.0.5",
