--- a/.k8s/backend-staging/user-hub.yaml
+++ b/.k8s/backend-staging/user-hub.yaml
@@ -39,7 +39,7 @@ spec:
           emptyDir: {}
       containers:
       - name: user-hub
-        image: k0t0/central:<TAG>
+        image: peacenikapp/frontend:<TAG>
         imagePullPolicy: Always
         ports:
         - containerPort: 12001
