--- a/.github/workflows/peacenik-staging.yml
+++ b/.github/workflows/peacenik-staging.yml
@@ -9,32 +9,35 @@ jobs:
       - name: Build and Publish Frontend 
         uses: whoan/docker-build-with-cache-action@v5
         with:
-          image_name: peacenikapp/frontend
           image_tag: v0.${{ env.RUN_ID }},latest
           context: ./frontend
           dockerfile: Dockerfile.production
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.pkg.github.com
+          repository: kotollc/koto/frontend
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }} }}
 
       - name: Build and Publish User Hub 
         uses: whoan/docker-build-with-cache-action@v5
         with:
-          image_name: peacenikapp/userhub
           image_tag: v0.${{ env.RUN_ID }},latest
           context: ./backend
           dockerfile: userhub/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.pkg.github.com
+          repository: kotollc/koto/userhub
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }} }}
 
       - name: Build and Publish Message Hub 
         uses: whoan/docker-build-with-cache-action@v5
         with:
-          image_name: peacenikapp/messagehub
           image_tag: v0.${{ env.RUN_ID }},latest
           directory: ./backend
           dockerfile: ./backend/messagehub/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.pkg.github.com
+          repository: kotollc/koto/backend
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }} }}
   deploy-to-staging:
     runs-on: ubuntu-latest
     needs: build-and-publish
