--- a/.k8s/frontend-staging/frontend.yaml
+++ b/.k8s/frontend-staging/frontend.yaml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: frontend
-        image: peacenikapp/frontend:<TAG>
+        image: docker.pkg.github.com/kotollc/koto/frontend:<TAG>
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
