--- a/.github/workflows/peacenik-staging.yml
+++ b/.github/workflows/peacenik-staging.yml
@@ -4,40 +4,47 @@ jobs:
     name: Build and Publish images
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build and Publish Frontend 
-        uses: whoan/docker-build-with-cache-action@v5
-        with:
-          image_tag: v0.${{ env.RUN_ID }},latest
-          image_name: kotollc/koto/frontend
-          context: ./frontend
-          dockerfile: Dockerfile.production
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} }}
+      - uses: actions/checkout@v2.3.2
+        name: Check out code
 
-      - name: Build and Publish User Hub 
-        uses: whoan/docker-build-with-cache-action@v5
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build and Publish Frontend
         with:
-          image_tag: v0.${{ env.RUN_ID }},latest
-          image_name: kotollc/koto/userhub
-          context: ./backend
-          dockerfile: userhub/Dockerfile
-          registry: docker.pkg.github.com
+          image: kotollc/koto/frontend
+          tags: ${{ github.run_number }},latest
+          registry: ghcr.io
+          githubOrg: kotollc
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} }}
+          password: ${{ secrets.GH_TOKEN }} 
+          directory: ./frontend
 
-      - name: Build and Publish Message Hub 
-        uses: whoan/docker-build-with-cache-action@v5
+          dockerfile: ./frontend/Dockerfile.production
+
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build and Publish Userhub
         with:
-          image_tag: v0.${{ env.RUN_ID }},latest
-          image_name: kotollc/koto/messagehub
+          image: kotollc/koto/userhub
+          tags: ${{ github.run_number }},latest 
+          registry: ghcr.io
+          githubOrg: kotollc
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_TOKEN }}
+          directory: ./backend
+          dockerfile: ./backend/userhub/Dockerfile
+
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build and Publish Messagehub
+        with:
+          image: kotollc/koto/messagehub
+          tags: ${{ github.run_number }},latest
+          registry: ghcr.io
+          githubOrg: kotollc
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_TOKEN }} 
           directory: ./backend
           dockerfile: ./backend/messagehub/Dockerfile
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }} }}
+
+
   deploy-to-staging:
     runs-on: ubuntu-latest
     needs: build-and-publish
@@ -52,21 +59,26 @@ jobs:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - name: Save DigitalOcean kubeconfig
         run: doctl kubernetes cluster kubeconfig save ${{ env.DO_CLUSTER_ID }}
+
       - name: Update deployment file (staging)
         run: |
-          sed -i 's|<TAG>|'v0.${{ env.RUN_ID }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml
-          sed -i 's|<TAG>|'v0.${{ env.RUN_ID }}'|' $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml
-          sed -i 's|<TAG>|'v0.${{ env.RUN_ID }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml
 
       - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes (staging)
         run: |
           kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/user-hub.yaml --force
           kubectl apply -f $GITHUB_WORKSPACE/.k8s/frontend-staging/frontend.yaml --force
           kubectl apply -f $GITHUB_WORKSPACE/.k8s/backend-staging/message-hub.yaml --force
+
       - name: Staging Push
         uses: rjstone/discord-webhook-notify@v1
         if: success()
         with:
           severity: info
-          details: v0.${{ env.RUN_ID }} pushed to staging
+          color: '#ff00aa'
+          avatarUrl: https://user-images.githubusercontent.com/118036/104819208-50108f80-582c-11eb-830d-ced2ea30ce0f.png
+          description: Build ${{ github.run_number }} pushed to ghcr.io
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          details: Staging updated successfully
