--- a/.k8s/backend-staging/message-hub.yaml
+++ b/.k8s/backend-staging/message-hub.yaml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: message-hub
-        image: docker.pkg.github.com/kotollc/koto/messagehub:<TAG>
+        image: ghcr.io/kotollc/koto/messagehub:<TAG>
         imagePullPolicy: Always
         ports:
         - containerPort: 12002
