--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Koto",
-  "name": "Koto",
+  "short_name": "Peacenik",
+  "name": "Peacenik",
   "icons": [
     {
       "src": "favicon.ico",
