--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,16 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/cli-platform-android": "3.0.0-alpha.2",
+    "@react-native-community/cli-platform-android": "^4.13.0",
     "@react-native-community/cookies": "^4.0.1",
     "@react-native-firebase/app": "^8.3.1",
     "@react-native-firebase/messaging": "^7.7.4",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-native": "^0.63.4",
     "react-native-device-info": "^6.0.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-webview": "^10.8.2"
+    "react-native-webview": "^11.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
