--- a/.github/workflows/peacenik-staging.yml
+++ b/.github/workflows/peacenik-staging.yml
@@ -1,4 +1,10 @@
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+    inputs:
+      push-to-prod:
+        description: 'Push to production?'     
+        default: 'false'
+        required: false
 jobs:
   build-and-publish:
     name: Build and Publish images
@@ -65,10 +71,18 @@ jobs:
           sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/staging/backend-staging/user-hub.yaml
           sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/staging/frontend-staging/frontend.yaml
           sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/staging/backend-staging/message-hub.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/production/backend/user-hub.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/production/frontend/frontend.yaml
+          sed -i 's|<TAG>|'${{ github.run_number }}'|' $GITHUB_WORKSPACE/.k8s/production/backend/message-hub.yaml
 
       - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes (staging)
         run: |
           kubectl apply --recursive -f $GITHUB_WORKSPACE/.k8s/staging/  --force
+
+      - name: Deploy Frontend and User-hub to DigitalOcean Kubernetes (production)
+        if: ${{ github.event.inputs.push-to-prod == 'true' }}
+        run: |
+          kubectl apply --recursive -f $GITHUB_WORKSPACE/.k8s/production/  --force
 
       - name: Staging Push
         uses: rjstone/discord-webhook-notify@v1
