--- a/.k8s/production/frontend/frontend.yaml
+++ b/.k8s/production/frontend/frontend.yaml
@@ -16,13 +16,13 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: frontend
-        image: k0t0/frontend:<TAG>
+        image: ghcr.io/kotollc/koto/frontend:<TAG>
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
           - name: KOTO_USER_HUB_ADDRESS
-            value: https://central.koto.at
+            value: https://central.peacenik.app
 ---
 apiVersion: v1
 kind: Service
